--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
 .</a>  
-			<br /> Xiaokang Zhang, <b>Jing Zhang</b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
+			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2403.19318</b>. 
 			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
 	</li></div>
@@ -270,20 +270,20 @@ My research direction is data mining and knowledge discovery. My current researc
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
 the Unimportant Layer.</a>  
-			<br /> Xiaodong Chan, Yuxuan Hu, <b>Jing  Zhang</b>
+			<br /> Xiaodong Chan, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2403.19135</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
-			<br /> Weizheng Lu, Jiaming Zhang, Jing Zhang, Yueguo Chen
+			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
 			<br /> <b>arXiv:2402.05121</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
 Text-to-SQL.</a>  
-			<br /> Haoyang Li, <b>Jing  Zhang</b>, Hanbing Liu, Ju Fan, Xiaokang Zhang, Jun Zhu, Renjie Wei, Hongyan Pan, Cuiping Li, Hong Chen.
+			<br /> Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Hanbing Liu, Ju Fan, Xiaokang Zhang, Jun Zhu, Renjie Wei, Hongyan Pan, Cuiping Li, Hong Chen.
 			<br /> <b>SIGMOD'24</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/codes" target="_blank">code&model&data</a> 
 	</li></div>
@@ -291,19 +291,19 @@ Text-to-SQL.</a>
 	<li> 
 			<a href="https://arxiv.org/abs/2403.11483" target="_blank">Open-World Semi-Supervised Learning for Node
 Classification.</a>  
-			<br /> Yanling Wang, <b>Jing Zhang</b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
+			<br /> Yanling Wang, <b>Jing Zhang<sup>*</sup></b>, Lingxi Zhang, Lixin Liu, Yuxiao Dong, Cuiping Li, Hong Chen, Hongzhi Yin.
 			<br /> <b>ICDE'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM kr">
 	<li> 
 			<a href="https://arxiv.org/pdf/2404.03491.pdf" target="_blank">A Cause-Effect Look at Alleviating Hallucination of Knowledge-grounded Dialogue Generation.</a>  
-			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Zijun Yao, <b>Jing Zhang</b>b, Lei Hou, Juanzi Li
+			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Zijun Yao, <b>Jing Zhang</b>, Lei Hou, Juanzi Li
 			<br /> <b>LREC-COLING'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
 	<li> 
 			<a href="https://arxiv.org/abs/2309.14362" target="_blank">Diversifying Question Generation over Knowledge Base via External Natural Questions.</a>  
-			<br /> Shasha Guo, <b>Jing Zhang</b>, Xirui Ke, Cuiping Li, Hong Chen
+			<br /> Shasha Guo, <b>Jing Zhang<sup>*</sup></b>, Xirui Ke, Cuiping Li, Hong Chen
 			<br /> <b>LREC-COLING'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
@@ -322,7 +322,7 @@ Knowledge Base Question Generation.</a>
 	<div class="pub all conf LLM">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
-			<br /> Yuxuan Hu, <b>Jing  Zhang</b>, Haoyang Li, Cuiping Li, Hong Chen.
+			<br /> Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>, Haoyang Li, Cuiping Li, Hong Chen.
 			<br /> <b>EMNLP'23</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-eval">
@@ -340,51 +340,51 @@ Knowledge Base Question Generation.</a>
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.11848.pdf" target="_blank">Web-Scale Academic Name Disambiguation: the WhoIsWho Benchmark, Leaderboard, and Toolkit.</a>  
-			<br /> Bo Chen, <b>Jing Zhang</b>, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
+			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
 			<br /> <b>KDD'23 (ADS)</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData kr kr-qa">
 		<li> 
 			<a href="https://arxiv.org/pdf/2306.14722.pdf" target="_blank">FC-KBQA: A Fine-to-Coarse Composition Framework for Knowledge Base Question Answering.</a>  
-			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
+			<br /> Lingxi Zhang, <b>Jing Zhang<sup>*</sup></b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
 			<br /> <b>ACL'23</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-ka">
 		<li> 
 			<a href="https://arxiv.org/pdf/2307.01640.pdf" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
-			<br /> Dingjun Wu, <b>Jing Zhang</b>, Xinmei Huang.
+			<br /> Dingjun Wu, <b>Jing Zhang<sup>*</sup></b>, Xinmei Huang.
 			<br /> <b>Findings of ACL'23</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData">
 		<li> 
 			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
-			<br /> Haoyang Li, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
+			<br /> Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen.
 			<br /> <b>AAAI'23</b>. 
 	</li></div>
 	<div class="pub all journal kr kr-qa">
 		<li> 
 			<a href="https://www.sciencedirect.com/science/article/pii/S2666651022000249" target="_blank">A survey on complex factual question answering.</a>  
-			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Xirui Ke, Haoyang Li, Xinmei Huang, Zhonghui Shao, Shulin Cao, Xin Lv.
+			<br /> Lingxi Zhang, <b>Jing Zhang<sup>*</sup></b>, Xirui Ke, Haoyang Li, Xinmei Huang, Zhonghui Shao, Shulin Cao, Xin Lv.
 			<br /> <b>AI Open'22</b>. 
 	</li></div>
 	
 	<div class="pub all journal grl grl-pt">
 		<li> 
 			<a href="https://arxiv.org/abs/2108.07516" target="_blank">Graph Contrastive Learning for Anomaly Detection.</a>  
-			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
+			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
 			<br /> <b>TKDE'22</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-qa LLM LLM4StructuredData">
 		<li> 
 			<a href="publications/EMNLP22-Guo-et-al-DSM.pdf" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
-			<br /> Shasha Guo, <b>Jing Zhang</b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
+			<br /> Shasha Guo, <b>Jing Zhang<sup>*</sup></b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
 			<br /> <b>EMNLP'22</b>. 
 	</li></div>
 
 	<div class="pub all conf kr kr-qa LLM LLM4StructuredData">
 		<li> 
 			<a href="publications/EMNLP22-Ke-et-al-ConversationKBQA.pdf" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
-			<br /> Xirui Ke, <b>Jing Zhang</b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
+			<br /> Xirui Ke, <b>Jing Zhang<sup>*</sup></b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
 			<br /> <b>Findings of EMNLP'22</b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
 	</li></div>
 	<div class="pub all conf kr kr-dialogue LLM">
@@ -403,19 +403,19 @@ Question Answering.</a>
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="publications/ACL22-demo-HOSMEL-Zhang-et-al.pdf" target="_blank">HOSMEL: A Hot-Swappable Modulized Entity Linking Toolkit for Chinese.</a>  
-			<br /> Daniel Zhang-Li, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Peng Zhang, Jie Tang, Juanzi Li. 
+			<br /> Daniel Zhang-Li, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Peng Zhang, Jie Tang, Juanzi Li. 
 			<br /> <b>ACL'22 (Demo)</b>.  
 	</li></div>
 	<div class="pub all conf grl grl-pt">
 		<li> 
 			<a href="publications/WWW22-Wang-et-al-ClusterSCL.pdf" target="_blank">ClusterSCL: Cluster-Aware Supervised Contrastive Learning on Graphs.</a>  
-			<br /> Yanling Wang, <b>Jing Zhang</b>, Haoyang Li, Yuxiao Dong, Hongzhi Yin, Cuiping Li, Hong Chen. 
+			<br /> Yanling Wang, <b>Jing Zhang<sup>*</sup></b>, Haoyang Li, Yuxiao Dong, Hongzhi Yin, Cuiping Li, Hong Chen. 
 			<br /> <b>WWW'22</b>.  
 	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://www.aaai.org/AAAI22Papers/AISI-5772.ChenB.pdf" target="_blank">CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.</a>  
-			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Xiaobin Tang, Lingfan Cai, Hong Chen, Cuiping Li, Peng Zhang, Jie Tang. 
+			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Xiaokang Zhang, Xiaobin Tang, Lingfan Cai, Hong Chen, Cuiping Li, Peng Zhang, Jie Tang. 
 			<br /> <b>AAAI'22</b>.  
 	</li></div>
 
@@ -424,7 +424,7 @@ Question Answering.</a>
 	<div class="pub all conf kr kr-qa">
 		<li> 
 			<a href="https://aclanthology.org/2021.findings-emnlp.159.pdf" target="_blank">A Pretraining Numerical Reasoning Model for Ordinal Constrained Question Answering on Knowledge Base.</a>  
-			<br /> Yu Feng, <b>Jing Zhang</b>, Gaole He, Wayne Xin Zhao, Lemao Liu, Quan Liu, Cuiping Li, Hong Chen. 
+			<br /> Yu Feng, <b>Jing Zhang<sup>*</sup></b>, Gaole He, Wayne Xin Zhao, Lemao Liu, Quan Liu, Cuiping Li, Hong Chen. 
 			<br /> <b>Findings of EMNLP'21 </b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2021</i>). 
 		</li>
 	</div>
@@ -432,7 +432,7 @@ Question Answering.</a>
 	<div class="pub all conf kr kr-kgc">
 		<li> 
 			<a href="https://aclanthology.org/2021.findings-emnlp.35.pdf" target="_blank">P-INT: A Path-based Interaction Model for Few-shot Knowledge Graph Completion.</a>  
-			<br /> Jingwen Xu, <b>Jing Zhang</b>, Xirui Ke, Yuxiao Dong, Hong Chen, Cuiping Li, Yongbin Liu.
+			<br /> Jingwen Xu, <b>Jing Zhang<sup>*</sup></b>, Xirui Ke, Yuxiao Dong, Hong Chen, Cuiping Li, Yongbin Liu.
 			<br /> <b>Findings of EMNLP'21 </b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2021</i>). 
 		</li>
 	</div>
@@ -448,7 +448,7 @@ Question Answering.</a>
 	<div class="pub all conf grl grl-pt">
 		<li> 
 			<a href="publications/SIGIR21-Wang-et-al-decoupled-GNN.pdf" target="_blank">Decoupling Representation Learning and Classification for GNN-based Anomaly Detection.</a>  
-			<br /> Yanling Wang, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen.  
+			<br /> Yanling Wang, <b>Jing Zhang<sup>*</sup></b>, Hongzhi Yin, Cuiping Li, and Hong Chen.  
 			<br /> <b>SIGIR'21</b> (<i>Proceedings of the 44rd ACM International SIGIR Conference on Research and Development in Information Retrieval</i>). 
 		</li>
 	</div>
@@ -456,7 +456,7 @@ Question Answering.</a>
 	<div class="pub all conf grl grl-pt social recommendation">
 		<li> 
 			<a href="https://arxiv.org/pdf/2012.07064.pdf" target="_blank">Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.</a>  
-			<br /> Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen.
+			<br /> Bowen Hao, <b>Jing Zhang<sup>*</sup></b>, Hongzhi Yin, Cuiping Li, and Hong Chen.
 			<br /> <b>WSDM'21</b> (<i>Proceedings of the 14th ACM International Conference on Web Search and Data Mining</i>).   
 	</div>
 
@@ -479,7 +479,7 @@ Question Answering.</a>
 	<div class="pub all conf social recommendation">
 		<li> 
 			<a href="https://arxiv.org/pdf/2012.14234.pdf" target="_blank">Recommending Courses in MOOCs for Jobs: An Auto Weak Supervision Approach.</a>  
-			<br /> Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin.
+			<br /> Bowen Hao, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen, and Hongzhi Yin.
 			<br /> <b>ECML-PKDD'20</b> (<i>Proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i>).    
 		</li>
 	</div>
@@ -494,7 +494,7 @@ Question Answering.</a>
 	<div class="pub all conf kr kr-ea">
 		<li> 
 			<a href="publications/IJCAI20-Tang-et-al-BERT-INT.pdf" target="_blank">BERT-INT: A BERT-based Interaction Model For Knowledge Graph Alignment.</a> 
-			<br /> Xiaobin Tang, <b>Jing Zhang</b>, Bo Chen, Yang Yang, Hong Chen, Cuiping Li.
+			<br /> Xiaobin Tang, <b>Jing Zhang<sup>*</sup></b>, Bo Chen, Yang Yang, Hong Chen, Cuiping Li.
 			<br /> <b>IJCAI'20</b> (<i>Proceedings of the 29th International Joint Conference on Artificial Intelligence</i>). 
 	</li></div>
 
@@ -502,7 +502,7 @@ Question Answering.</a>
 	<div class="pub all journal kr kr-el">
 		<li> 
 			<a href="publications/TKDE19-Chen-et-al-CONNA.pdf" target="_blank">CONNA: Addressing Name Disambiguation on The Fly.</a>  
-			<br /> Bo Chen, <b>Jing Zhang</b>, Jie Tang, Lingfan Cai, Zhaoyu Wang, Shu Zhao, Hong Chen, and Cuiping Li.
+			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Jie Tang, Lingfan Cai, Zhaoyu Wang, Shu Zhao, Hong Chen, and Cuiping Li.
 			<br /> <b>TKDE'20</b> (<i>IEEE Transaction on Knowledge and Data Engineering</i>). 
 		</li>
 	</div>
@@ -519,7 +519,7 @@ Question Answering.</a>
 	<div class="pub all conf kr kr-ea">
 		<li> 
 			<a href="publications/PAKDD20-CHEN-et-al-JARKA.pdf" target="_blank">JarKA: Modeling Attribute Interactions for Cross-lingual Knowledge Alignment.</a>  
-			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaobin Tang, Hong Chen, Cuiping Li.
+			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Xiaobin Tang, Hong Chen, Cuiping Li.
 			<br /> <b>PAKDD'20</b> (<i>Proceedings of the 24th Pacific-Asia Conference on Knowledge Discovery and Data Mining</i>).  	
 	</li></div>
 
@@ -527,7 +527,7 @@ Question Answering.</a>
 	<div class="pub all conf social recommendation">
 		<li> 
 			<a href="publications/APWeb20-HAO-et-al-FewshotRec.pdf" target="_blank">Few-Shot Representation Learning for Cold-Start Users and Items.</a>  
-			<br /> Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen. 
+			<br /> Bowen Hao, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen. 
 			<br /> <b>APWeb-WAIM'20</b> (<i>Proceedings of the 4th APWeb-WAIM International Joint Conference on Web and Big Data</i>). 		
 	</li></div>
 
@@ -550,7 +550,7 @@ Question Answering.</a>
 	<div class="pub all journal grl grl-pgm">
 		<li> 
 			<a href="publications/TKDE19-Cen-et-al-Trust-Relationship-Prediction.pdf" target="_blank">Trust Relationship Prediction in Alibaba E-Commerce Platform.</a>  
-			<br /> Yukuo Cen, <b>Jing Zhang</b>, Gaofei Wang, Yujie Qian, Chuizheng Meng, Zonghong Dai, Hongxia Yang, Jie Tang. 
+			<br /> Yukuo Cen, <b>Jing Zhang<sup>*</sup></b>, Gaofei Wang, Yujie Qian, Chuizheng Meng, Zonghong Dai, Hongxia Yang, Jie Tang. 
 			<br /> <b>TKDE'19</b> (<i>IEEE Transaction on Knowledge and Data Engineering</i>). 
 		</li>
 	</div>
