--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Knowledge Base Question Generation.</a>
 	<div class="pub all conf LLM LLM-eval">
 		<li> 
 			<a href="https://aclanthology.org/2023.findings-emnlp.1049.pdf" target="_blank">FFAEval: Evaluating Dialogue System via Free-For-All Ranking.</a>  
-			<br /> Zeyao Ma, Zijun Yao, <b>Jing Zhang</b>, Jifan Yu,  Xiaohan Zhang, Juanzi  Li, Jie Tang.
+			<br /> Zeyao Ma, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu,  Xiaohan Zhang, Juanzi  Li, Jie Tang.
 			<br /> <b>Findings of EMNLP'23</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-dialogue LLM LLM-finetune LLM-ka">
