--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@ My research direction is data mining and knowledge discovery. My current researc
 			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
 			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> | 
 			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> |
+			<a class="url"  onclick="show('LLM4DB')">LLM for DB</a> |
+			<a class="url"  onclick="show('LLM4Toolusing')">LLM for Tool Using</a> |
+			<a class="url"  onclick="show('LLMhallucination')">LLM Hallucination</a> |
 			<a class="url"  onclick="show('LLM-eval')">evaluation</a> 
 		<br />
 	</li>
@@ -258,6 +261,50 @@ My research direction is data mining and knowledge discovery. My current researc
 
 <ol>
 
+	<div class="pub all conf LLM LLM4StructuredData">
+	<li> 
+			<a href="https://arxiv.org/abs/2405.15165" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
+			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
+			<br /> <b>arXiv:2405.15165</b>. 
+			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
+
+	</li></div>	
+	<div class="pub all conf LLM LLMhallucination">
+	<li> 
+			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
+			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang</b>b, Lei Hou, Juanzi Li
+			<br /> <b>KDD'24</b>. 
+			<br /> <b>arXiv:2406.11681</b>. 
+	</li></div>
+
+	<div class="pub all conf LLM LLMhallucination">
+	<li> 
+			<a href="https://arxiv.org/abs/2404.06742" target="_blank">Transferable and Efficient Non-Factual Content Detection via Probe Training with Offline Consistency Checking
+.</a>  
+			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang</b>b, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
+			<br /> <b>ACL'24</b>. 
+			<br /> <b>arXiv:2404.06742</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM4StructuredData LLM4DB">
+	<li> 
+			<a href="https://arxiv.org/abs/2404.1158" target="_blank">MTune: Accelerate Database Knob Tuning with Large
+Language Models.</a>  
+			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang</b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
+			<br /> <b>arXiv:2404.11581</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLMhallucination">
+	<li> 
+			<a href="https://arxiv.org/abs/2406.0532" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models
+.</a>  
+			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
+			<br /> <b>arXiv:2406.05328</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM4Toolusing">
+	<li> 
+			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
+			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang</b>b, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
+			<br /> <b>arXiv:2405.15165</b>. 
+	</li></div>	
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
@@ -317,7 +364,7 @@ Knowledge Base Question Generation.</a>
 		<li> 
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">Transformer Compression via Subspace Projection.</a>  
 			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Chen Zhao, Cuiping Li, Hong Chen.
-			<br /> <b>arXiv:2308.16475</b>. 
+			<br /> <b>Findings of ACL'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM">
 		<li> 
