--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
-			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
+			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
 			<br /> <b>arXiv:2405.15165</b>. 
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
@@ -272,7 +272,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	<div class="pub all conf LLM LLMhallucination">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
-			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang</b>b, Lei Hou, Juanzi Li
+			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang<sup>*</sup></b>, Lei Hou, Juanzi Li
 			<br /> <b>KDD'24</b>. 
 			<br /> <b>arXiv:2406.11681</b>. 
 	</li></div>
@@ -281,7 +281,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	<li> 
 			<a href="https://arxiv.org/abs/2404.06742" target="_blank">Transferable and Efficient Non-Factual Content Detection via Probe Training with Offline Consistency Checking
 .</a>  
-			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang</b>b, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
+			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
 			<br /> <b>ACL'24</b>. 
 			<br /> <b>arXiv:2404.06742</b>. 
 	</li></div>
@@ -289,7 +289,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	<li> 
 			<a href="https://arxiv.org/abs/2404.1158" target="_blank">MTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
-			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang</b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
+			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
 			<br /> <b>arXiv:2404.11581</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLMhallucination">
@@ -302,7 +302,7 @@ Language Models.</a>
 	<div class="pub all conf LLM LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
-			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang</b>b, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
+			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2405.15165</b>. 
 	</li></div>	
 	<div class="pub all conf LLM LLM4StructuredData">
