--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4DB">
 	<li> 
-			<a href="https://arxiv.org/abs/2404.1158" target="_blank">MTune: Accelerate Database Knob Tuning with Large
+			<a href="https://arxiv.org/abs/2404.1158" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
 			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
 			<br /> <b>arXiv:2404.11581</b>. 
