--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@ My research direction is data mining and knowledge discovery. My current researc
 
 	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
-			<a href="https://arxiv.org/abs/2405.15165" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
+			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
-			<br /> <b>arXiv:2405.15165</b>. 
+			<br /> <b>arXiv:2406.14991</b>. 
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
@@ -285,14 +285,14 @@ My research direction is data mining and knowledge discovery. My current researc
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4DB">
 	<li> 
-			<a href="https://arxiv.org/abs/2404.1158" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
+			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
 			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
 			<br /> <b>arXiv:2404.11581</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLMhallucination">
 	<li> 
-			<a href="https://arxiv.org/abs/2406.0532" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models
+			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models
 .</a>  
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
@@ -315,7 +315,7 @@ Language Models.</a>
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
 the Unimportant Layer.</a>  
-			<br /> Xiaodong Chan, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
+			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2403.19135</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData">
