--- a/index.html
+++ b/index.html
@@ -714,13 +714,14 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 	<li>Xiaokang Zhang, M.S. student, Fall 2022 -</li>
 	<li>Zhonghui Shao, M.S. student, Fall 2022 -</li>
 	<li>Haoyang Li, Ph.D. student, Fall 2021 - (Co-supervised with Prof. Cuiping Li)</li>
-	<li>Xirui Ke, M.S. student, Fall 2021 -</li>
-	<li>Lingxi Zhang, M.S. student, Fall 2021 -</li>
 	<li>Shasha Guo, Ph.D. student, Fall 2020 - (Co-supervised with Prof. Cuiping Li)</li>
 </ol>
 
 <b>Alumni</b>
 <ol>
+	<li>Yiqi Xu, M.S. 2022-2024. Thesis Title:Factuality detection method combining inside and outside information of Large Language Models, First Employment: Agricultural Bank of China</li>
+	<li>Xirui Ke, M.S. 2021-2024. Thesis Title:Knowledge Base Question Answering Based on Pre-trained Language Models, First Employment: JingDong</li>
+	<li>Lingxi Zhang, M.S. 2021-2024. Dissertation Title:Generalization of knowledge base question answering, First Employment: Pursuing a Ph.D. in Computer Science at Rice University</li>
 	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
 	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
 Interaction Supervised Learning and Large Language Model Prompt Learning, First Employment:  China Construction Bank</li>
@@ -735,11 +736,11 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
-	
+	<li>2024: Invited Talk about StructureDataLLM at WAIC.</li> <a class="button" href="publications/StructureDataLLM-zhangjing.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2024: Invited Talk about LLM4DB at Huawei.</li>
 	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing.</li>
 	<li>2023: Invited Talk about Integrating Structured Data With LLM at School of Computer Science & Techonlogy, Anhui University.</li>
-	<li>2023: Invited Talk about Integrating Structured Data With LLM by CCF CCF Database Special Committee.</li>
+	<li>2023: Invited Talk about Integrating Structured Data With LLM by CCF Database Special Committee.</li>
 	<li>2023: Invited Talk about ChatGPT at PingCAP.</li>
 	<li>2022: Invited Talk about Graph Contrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
 	<li>2022: Invited Talk about Knowledge Graph Question Answering on WAIC 2022. <a class="button" href="publications/Slides-KBQA-Zhangjing-WAIC-2022.9.2.pdf" target="_blank">slides</a> </span> </li> 
@@ -772,7 +773,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
-	<li>2024: KDD, WWW, AAAI, ARR
+	<li>2024: KDD, WWW, AAAI, ARR, NeurIPS
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
 	<li>2021: KDD, WWW, IJCAI, ECML/PKDD (SPC) 
