--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
 	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
 Interaction Supervised Learning and Large Language Model Prompt Learning, First Employment:  China Construction Bank</li>
-	<li>Chenxu Hu, M.S., 2020-2022. Thesis Title: Metadata Management under Multi-model Big Data Systems (Co-supervised with Prof. Feng Zhang), First Employment: People's Bank of China</li>
+	<li>Chenxu Hu, M.S., 2020-2022. Thesis Title: Metadata Management under Multi-model Big Data Systems (Co-supervised with Prof. Feng Zhang), First Employment: Haizhixingtu</li>
 	<li>Xiaobin Tang, M.S., 2019-2022. Thesis Title: Interaction and Self-training based Methods for Entity Alignment, First Employment: China Tobacco</li>
 	<li>Xiangying Cao, M.S., 2019-2021. Thesis Title: Entity Linking-based Disambiguation of Academic Institution Names, First Employment: People's Bank of China</li>
 	<li>Lingfan Cai, M.S., 2018-2021. Thesis Title: The optimization of zero-shot entity linking, First Employment: CITIC Securities</li>
