--- a/index.html
+++ b/index.html
@@ -706,6 +706,7 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 	<li>Bohan Zhang, M.S. student, Fall 2024 -</li>
 	<li>Xiaodong Chen, M.S. student, Fall 2024 -</li>
 	<li>Guanlin Li, M.S. student, Fall 2024 -</li>
+	<li>Shang Wu, M.S. student, Fall 2024 -</li>
 	<li>Yuanchun Wang, Ph.D. student, Fall 2023 -</li>
 	<li>Xinxin Zhao, Ph.D. student, Fall 2023 - (Co-supervised with Prof. Cuiping Li)</li>
 	<li>Zeyao Ma, M.S. student, Fall 2023 -</li>
