--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
-	<li>2024: Invited Talk about StructureDataLLM at WAIC.</li> <a class="button" href="publications/StructureDataLLM-zhangjing.pdf" target="_blank">slides</a> </span> </li> 
+	<li>2024: Invited Talk about StructureDataLLM at WAIC. <a class="button" href="publications/StructureDataLLM-zhangjing.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2024: Invited Talk about LLM4DB at Huawei.</li>
 	<li>2023: Invited Talk about StructruedDataLLM at the 11th China National Conference on Social Media Processing.</li>
 	<li>2023: Invited Talk about Integrating Structured Data With LLM at School of Computer Science & Techonlogy, Anhui University.</li>
