--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 <ol>
 	<li>Yiqi Xu, M.S. 2022-2024. Thesis Title:Factuality detection method combining inside and outside information of Large Language Models, First Employment: Agricultural Bank of China</li>
 	<li>Xirui Ke, M.S. 2021-2024. Thesis Title:Knowledge Base Question Answering Based on Pre-trained Language Models, First Employment: JingDong</li>
-	<li>Lingxi Zhang, M.S. 2021-2024. Dissertation Title:Generalization of knowledge base question answering, First Employment: Pursuing a Ph.D. in Computer Science at Rice University</li>
+	<li>Lingxi Zhang, M.S. 2021-2024. Thesis Title:Generalization of knowledge base question answering, First Employment: Pursuing a Ph.D. in Computer Science at Rice University</li>
 	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
 	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
 Interaction Supervised Learning and Large Language Model Prompt Learning, First Employment:  China Construction Bank</li>
