--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@ My research direction is data mining and knowledge discovery. My current researc
 	</li>
 	<li style="list-style-type:none">
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
-			<a class="url"  onclick="show('LLM-finetune')">fine-tuning</a> |
-			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
+			<a class="url"  onclick="show('LLM-alignment')">LLM alignment</a> |
 			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> | 
 			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> |
 			<a class="url"  onclick="show('LLM4DB')">LLM for DB</a> |
@@ -261,7 +260,7 @@ My research direction is data mining and knowledge discovery. My current researc
 
 <ol>
 
-	<div class="pub all conf LLM LLM4StructuredData">
+	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
@@ -269,7 +268,7 @@ My research direction is data mining and knowledge discovery. My current researc
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
-	<div class="pub all conf LLM LLMhallucination">
+	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
 			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang<sup>*</sup></b>, Lei Hou, Juanzi Li
@@ -297,7 +296,7 @@ Language Models.</a>
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4Toolusing">
+	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
@@ -324,7 +323,7 @@ the Unimportant Layer.</a>
 			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
 			<br /> <b>arXiv:2402.05121</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData">
+	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLMhallucination LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
 Text-to-SQL.</a>  
@@ -364,7 +363,7 @@ Knowledge Base Question Generation.</a>
 			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Chen Zhao, Cuiping Li, Hong Chen.
 			<br /> <b>Findings of ACL'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM">
+	<div class="pub all conf LLM LLM-alignment">
 		<li> 
 			<a href="https://aclanthology.org/2023.emnlp-main.108.pdf" target="_blank">A Generation-based Deductive Method for Math Word Problems.</a>  
 			<br /> Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>, Haoyang Li, Cuiping Li, Hong Chen.
@@ -376,7 +375,7 @@ Knowledge Base Question Generation.</a>
 			<br /> Zeyao Ma, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu,  Xiaohan Zhang, Juanzi  Li, Jie Tang.
 			<br /> <b>Findings of EMNLP'23</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-dialogue LLM LLM-finetune LLM-ka">
+	<div class="pub all conf kr kr-dialogue LLM LLM-alignment">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.14401.pdf" target="_blank">GLM-Dialog: Noise-tolerant Pre-training for Knowledge-grounded Dialogue Generation.</a>  
 			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Daniel Zhang-Li, Jifan Yu, Zijun Yao, Zeyao Ma, Yiqi Xu, Haohua Wang, Xiaohan Zhang, Nianyi Lin, Sunrui Lu, Juanzi Li, Jie Tang.
@@ -394,13 +393,13 @@ Knowledge Base Question Generation.</a>
 			<br /> Lingxi Zhang, <b>Jing Zhang<sup>*</sup></b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
 			<br /> <b>ACL'23</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM-ka">
+	<div class="pub all conf LLM LLM-alignment">
 		<li> 
 			<a href="https://arxiv.org/pdf/2307.01640.pdf" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
 			<br /> Dingjun Wu, <b>Jing Zhang<sup>*</sup></b>, Xinmei Huang.
 			<br /> <b>Findings of ACL'23</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData">
+	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB">
 		<li> 
 			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
 			<br /> Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen.
@@ -432,7 +431,7 @@ Knowledge Base Question Generation.</a>
 			<br /> Xirui Ke, <b>Jing Zhang<sup>*</sup></b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
 			<br /> <b>Findings of EMNLP'22</b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
 	</li></div>
-	<div class="pub all conf kr kr-dialogue LLM">
+	<div class="pub all conf kr kr-dialogue LLM LLM-alignment">
 		<li> 
 			<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539135" target="_blank">XDAI: A Tuning-free Framework for Exploiting Pre-trained Language Models in Knowledge Grounded Dialogue Generation.</a>  
 			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Xinyu Guan, <b>Jing Zhang</b>, Lei Hou, Juanzi Li, and Jie Tang. 
