--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ My research direction is data mining and knowledge discovery. My current researc
 
 <ol>
 
-	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
@@ -282,27 +282,27 @@ My research direction is data mining and knowledge discovery. My current researc
 			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
 			<br /> <b>ACL'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData LLM4DB">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
 			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
 			<br /> <b>arXiv:2404.11581</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLMhallucination">
+	<div class="pub all preprint LLM LLMhallucination">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models
 .</a>  
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2405.15165</b>. 
 	</li></div>	
-	<div class="pub all conf LLM LLM4StructuredData">
+	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
 .</a>  
@@ -310,14 +310,14 @@ Language Models.</a>
 			<br /> <b>arXiv:2403.19318</b>. 
 			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
 	</li></div>
-	<div class="pub all conf LLM LLM4Compression">
+	<div class="pub all preprint LLM LLM4Compression">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
 the Unimportant Layer.</a>  
 			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2403.19135</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData">
+	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
 			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
