--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Knowledge Base Question Generation.</a>
 	<div class="pub all conf LLM LLM4Compression">
 		<li> 
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">SP^3: Enhancing Structured Pruning via PCA Projection.</a>  
-			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Chen Zhao, Cuiping Li, Hong Chen.
+			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Zhe Zhao, Chen Zhao, Xiaodong Chen, Cuiping Li, Hong Chen.
 			<br /> <b>Findings of ACL'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-alignment">
