--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ My research direction is data mining and knowledge discovery. My current researc
 
 <ol>
 
-	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing">
+	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
