--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ the Unimportant Layer.</a>
 			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
 			<br /> <b>arXiv:2402.05121</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLMhallucination LLM4DB">
+	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
 Text-to-SQL.</a>  
