--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ My research direction is data mining and knowledge discovery. My current researc
 			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
 			<br /> <b>ACL'24</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
@@ -296,13 +296,13 @@ Language Models.</a>
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2405.15165</b>. 
 	</li></div>	
-	<div class="pub all preprint LLM LLM4StructuredData">
+	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
 .</a>  
@@ -323,7 +323,7 @@ the Unimportant Layer.</a>
 			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
 			<br /> <b>arXiv:2402.05121</b>. 
 	</li></div>
-	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB">
+	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/pdf/2402.16347.pdf" target="_blank">CodeS: Towards Building Open-source Language Models for
 Text-to-SQL.</a>  
